--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -45,6 +45,7 @@ p {
   display: inline-block;
   height: 25px;
   margin: 0 3px;
+  transform: translateZ(0);
   transform-origin: center center;
   width: 1px;
 
@@ -53,17 +54,17 @@ p {
   }
 
   &:nth-child(2) {
-    animation-delay: 180ms;
+    animation-delay: -180ms;
     background: $yellow;
   }
 
   &:nth-child(3) {
-    animation-delay: 360ms;
+    animation-delay: -360ms;
     background: $tomato;
   }
 
   &:nth-child(4) {
-    animation-delay: 540ms;
+    animation-delay: -540ms;
     background: $blue;
   }
 
